# gitTUIt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  release-please-config.json
.cargo/: audit.toml  config.toml
.githooks/: commit-msg
.github/workflows/: cd.yml  ci.yml  lockfile-verify.yml  release-please.yml  release-pr-lock-sync.yml  security-audit.yml
.gittuit/: commit_config.json
.gittuit-runtime/config/: repos.json
scripts/: commit_policy.ps1  commit_policy.sh  commit_rules.json  validate_commit_msg.ps1  validate_commit_msg.sh  workspace_release.ps1  workspace_release.sh
src/: app.rs  commit_config.rs  diagnostics.rs  git.rs  main.rs  repo_registry.rs  runtime_paths.rs  tree.rs  ui.rs
src/app/: branches.rs  history.rs  pull_requests.rs  stash.rs  tracking.rs
src/git/: branches.rs  history.rs  prs.rs  stash.rs
src/tree/: changed_files_tree.rs
