[package]
name = "gitTUIt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
asyncgit = { git = "https://github.com/gitui-org/gitui", package = "asyncgit", rev = "685cca91fd5f83d1c6c14a0aefc057f71872acea" }
crossterm = "0.29.0"
dirs = "6.0.0"
log = "0.4.33"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
simplelog = "0.12.2"
